--- a/JZTicTacToeWithAI/en.lproj/MainStoryboard.storyboard
+++ b/JZTicTacToeWithAI/en.lproj/MainStoryboard.storyboard
@@ -14,13 +14,15 @@
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="71R-Xa-Ky5">
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dho-w4-H32">
+                                    <button opaque="NO" alpha="0.70000000000000007" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dho-w4-H32">
+                                        <color key="backgroundColor" red="0.1960784314" green="0.30980392159999998" blue="0.52156862749999999" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="GMa-SW-bxi"/>
                                             <constraint firstAttribute="width" constant="113" id="bhA-h3-mRr"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" size="button"/>
                                         <state key="normal" title="Reset">
-                                            <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <state key="highlighted">
@@ -38,9 +40,6 @@
                                         </constraints>
                                     </scrollView>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="You wins:  0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XjL-T5-NF0">
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="250" id="afb-Oh-cwl"/>
-                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
@@ -50,13 +49,14 @@
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cia-eR-w3h">
+                                    <button opaque="NO" alpha="0.70000000000000007" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cia-eR-w3h">
+                                        <color key="backgroundColor" red="0.1960784314" green="0.30980392159999998" blue="0.52156862749999999" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="117" id="he7-29-Qvz"/>
+                                            <constraint firstAttribute="width" constant="117" id="m08-Fn-Nbd"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" size="button"/>
                                         <state key="normal" title="New Game">
-                                            <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <state key="highlighted">
@@ -71,22 +71,39 @@
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="VNB-bU-lXM">
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="250" id="pfZ-SP-VVn"/>
+                                        </constraints>
+                                        <segments>
+                                            <segment title="You go first"/>
+                                            <segment title="Computer goes first"/>
+                                        </segments>
+                                        <connections>
+                                            <action selector="segmentedControlAction:" destination="2" eventType="valueChanged" id="6YZ-L8-Gce"/>
+                                        </connections>
+                                    </segmentedControl>
                                 </subviews>
                                 <constraints>
+                                    <constraint firstItem="cia-eR-w3h" firstAttribute="bottom" secondItem="dho-w4-H32" secondAttribute="bottom" type="default" id="5Fg-fP-6sx"/>
+                                    <constraint firstItem="XjL-T5-NF0" firstAttribute="trailing" secondItem="VNB-bU-lXM" secondAttribute="trailing" type="default" id="6ba-hT-fC7"/>
+                                    <constraint firstItem="cia-eR-w3h" firstAttribute="top" secondItem="dho-w4-H32" secondAttribute="top" type="default" id="AiC-aB-Mys"/>
                                     <constraint firstItem="tKO-Uf-WG2" firstAttribute="trailing" secondItem="ctz-JH-eXk" secondAttribute="trailing" type="default" id="DjZ-Vq-KHX"/>
-                                    <constraint firstItem="XjL-T5-NF0" firstAttribute="centerX" secondItem="ErB-9B-8CU" secondAttribute="centerX" type="default" id="DmT-Z8-sgM"/>
+                                    <constraint firstItem="VNB-bU-lXM" firstAttribute="top" secondItem="ErB-9B-8CU" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="HWL-Io-WtA"/>
+                                    <constraint firstItem="XjL-T5-NF0" firstAttribute="centerX" secondItem="71R-Xa-Ky5" secondAttribute="centerX" type="default" id="IK4-zV-Ry7"/>
                                     <constraint firstItem="ctz-JH-eXk" firstAttribute="trailing" secondItem="XjL-T5-NF0" secondAttribute="trailing" type="default" id="LbY-tY-nYZ"/>
-                                    <constraint firstItem="dho-w4-H32" firstAttribute="top" secondItem="71R-Xa-Ky5" secondAttribute="top" constant="394" id="QWn-It-yZX"/>
                                     <constraint firstItem="tKO-Uf-WG2" firstAttribute="leading" secondItem="ctz-JH-eXk" secondAttribute="leading" type="default" id="TAr-Fa-3ux"/>
-                                    <constraint firstItem="ErB-9B-8CU" firstAttribute="top" secondItem="71R-Xa-Ky5" secondAttribute="top" constant="20" symbolic="YES" type="default" id="U5g-mm-d3p"/>
+                                    <constraint firstItem="ErB-9B-8CU" firstAttribute="centerX" secondItem="VNB-bU-lXM" secondAttribute="centerX" type="default" id="X3y-yv-ITw"/>
                                     <constraint firstItem="cia-eR-w3h" firstAttribute="trailing" secondItem="tKO-Uf-WG2" secondAttribute="trailing" type="default" id="XY3-z9-P70"/>
-                                    <constraint firstItem="XjL-T5-NF0" firstAttribute="top" secondItem="71R-Xa-Ky5" secondAttribute="top" constant="300" id="czj-iH-Mfm"/>
+                                    <constraint firstItem="dho-w4-H32" firstAttribute="top" secondItem="71R-Xa-Ky5" secondAttribute="top" constant="411" id="d69-cC-8fB"/>
                                     <constraint firstItem="XjL-T5-NF0" firstAttribute="leading" secondItem="ctz-JH-eXk" secondAttribute="leading" type="default" id="dN1-nw-xl3"/>
-                                    <constraint firstAttribute="bottom" secondItem="dho-w4-H32" secondAttribute="bottom" constant="111" id="diY-rB-tyr"/>
-                                    <constraint firstItem="ctz-JH-eXk" firstAttribute="centerX" secondItem="71R-Xa-Ky5" secondAttribute="centerX" type="default" id="fbJ-b5-qy5"/>
-                                    <constraint firstItem="dho-w4-H32" firstAttribute="baseline" secondItem="cia-eR-w3h" secondAttribute="baseline" type="default" id="jXx-T6-a19"/>
+                                    <constraint firstItem="XjL-T5-NF0" firstAttribute="top" secondItem="71R-Xa-Ky5" secondAttribute="top" constant="322" id="fhY-hN-DG0"/>
+                                    <constraint firstItem="VNB-bU-lXM" firstAttribute="leading" secondItem="XjL-T5-NF0" secondAttribute="leading" type="default" id="mr0-Nw-sHA"/>
                                     <constraint firstItem="dho-w4-H32" firstAttribute="leading" secondItem="tKO-Uf-WG2" secondAttribute="leading" type="default" id="or5-9i-9Tp"/>
+                                    <constraint firstItem="ErB-9B-8CU" firstAttribute="top" secondItem="71R-Xa-Ky5" secondAttribute="top" constant="6" id="pP9-hq-2Sg"/>
                                     <constraint firstAttribute="trailing" secondItem="ErB-9B-8CU" secondAttribute="trailing" constant="30" id="qx3-qi-q5j"/>
+                                    <constraint firstItem="cia-eR-w3h" firstAttribute="baseline" secondItem="dho-w4-H32" secondAttribute="baseline" type="default" id="raz-E8-kep"/>
+                                    <constraint firstAttribute="bottom" secondItem="dho-w4-H32" secondAttribute="bottom" constant="97" id="ukz-MV-Rmq"/>
                                     <constraint firstItem="tKO-Uf-WG2" firstAttribute="top" secondItem="ctz-JH-eXk" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="wLC-T6-xdF"/>
                                     <constraint firstItem="ctz-JH-eXk" firstAttribute="top" secondItem="XjL-T5-NF0" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="xGv-La-x2w"/>
                                 </constraints>
@@ -105,6 +122,7 @@
                         <outlet property="labelDraws" destination="tKO-Uf-WG2" id="bFN-n8-8ad"/>
                         <outlet property="labelYouWins" destination="XjL-T5-NF0" id="mdG-ZR-hfx"/>
                         <outlet property="scrollView" destination="ErB-9B-8CU" id="uBM-Sj-tyJ"/>
+                        <outlet property="segmentedControl" destination="VNB-bU-lXM" id="M50-2I-FTq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
